--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ h4,
 h5,
 h6 {
 	font-family: 'Nunito';
-	font-weight: 800;
+font-weight: 800;
 }
 
 p {
@@ -63,6 +63,13 @@ p {
 }
 
 /*header*/
+
+header {
+	z-index: 1;
+	position: relative;
+	padding-top: 20px;
+
+}
 
 .nav-col{
 	float: left;
@@ -88,3 +95,83 @@ p {
 .logo img{
 	width: 180px;
 }
+.menu a {
+	text-decoration: none;
+	padding: 22px;
+	display: inline-block;
+	color: #4d4d4d;
+	transition: all 0.5s ease;
+}
+.menu a:hover {
+	color:#f47514;
+}
+.cnt-info-col a{
+	color: #4d4d4d;
+	text-decoration: none;
+	margin-top: 23px;
+	display: inline-block;
+	font-size: 16px;
+	font-weight: 400;
+	transition: all 0.5s ease;
+}
+.cnt-info-col a:hover {
+    color:#f47514;
+}
+section.header-bg-parent{
+	position: relative;
+	top: -83px;
+}
+.header-col1{
+	float: left;
+	width: 35%;
+	position: absolute;
+	top: 25%;
+	left:10%;
+}
+.header-col2 {
+	float: right;
+	background-image: url(../images/supermarket.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100vh;
+	width: 75%;
+}
+.header-col1 h5{
+	color: #3b3663;
+	font-size: 15px;
+	font-weight: 700;
+	letter-spacing: 1px;
+}
+.header-col1 h2{
+	color: #3b3663;
+	font-size: 60px;
+	}
+
+.header-col1 h2{
+	color: #3b3663;
+	font-size: 60px;
+	line-height: 43px;
+	margin: 21px 0px 15px;
+}
+.header-col1 p {
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 26px;
+	margin: 20px 0px 0px;
+}
+button.common-btn {
+	background: linear-gradient(90deg, #8b81ef,#6759e8);
+	padding: 10px 20px;
+	color: #fff;
+	border: none;
+	border-radius: 10px;
+	font-family: "Nunito";
+	font-weight: 800;
+	cursor: pointer;
+	transition: all 0.5s ease;
+	margin: 20px 0px;
+}
+button.common-btn:hover {
+	background: linear-gradient(180deg, #6759e8 ,#8b81ef);
+	}
