--- a/style.css
+++ b/style.css
@@ -335,3 +335,57 @@ section.header-bg-parent:after {
 section#why-choose-us {
 	margin-top: 60px;
 }
+
+/*contact*/
+
+#contact-us {
+	background-image:url(../images/contact.jpeg);
+	background-position:center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding: 150px 0px;
+}
+
+.form-par {
+    background-image: linear-gradient(
+45deg
+, #6759e8, transparent);
+    padding: 30px 40px;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.form-com {
+    width: 100%;
+    height: 40px;
+    margin: 10px 0px;
+    padding: 10px 10px;
+}
+
+.form-par h2 {
+    text-align: center;
+    font-size: 30px;
+    font-weight: 800;
+    font-family: 'NUNITO';
+    margin-bottom: 25px;
+}
+
+input.submit-btn {
+    color: #fff;
+    border: none;
+    background-image: linear-gradient(
+180deg
+,#17161b 0%, #4d4d4d 100%);
+    padding: 14px 40px;
+    margin: 20px auto 0px;
+    display: block;
+	cursor:pointer;
+	transition: all 0.5s ease;
+}
+input.submit-btn:hover {
+    
+    background-image: linear-gradient(
+180deg
+,#4d4d4d 0%, #17161b 100%);
+    
+}
